gitops/raw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app
  namespace: raw-app
  labels:
    app: node-app
spec:
  selector:
    app: node-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
